move code to enterprise folder, fix some e2e, adjust header alignment, fix some types

--- a/enterprise/frontend/src/metabase-enterprise/metabot/components/MetabotChat/MetabotChat.module.css
+++ b/enterprise/frontend/src/metabase-enterprise/metabot/components/MetabotChat/MetabotChat.module.css
@@ -10,7 +10,8 @@
 }
 
 .header {
-  padding: 1.5rem var(--paddxing-x) 1rem;
+  /* top padding is set to visually align w/ the dashboard action buttons */
+  padding: 1.25rem var(--paddxing-x) 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
